style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
@import "meyer-reset.css";

* {
  font-family: "Roboto", sans-serif;
}

html {
  --red: #ff0000;
  --lightRed: #ff7878;
  --lightGreen: #74d680;
  --darkGreen: #378b29;
}

body {
  margin: 0;
  padding: 0;
  font-size: 30px;
  text-align: center;
}

.heading {
  padding: 0px 12px 0px 12px;
}

.container {
  display: flex;
  flex-direction: column;
  height: 100vh;
  color: white;
}

.header,
.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  /* flex: 0 0 50px; */
  background: var(--red);
  height: 50px;
}

.content-body {
  /*   flex: 1 1 auto; */
  flex-grow: 1; /* equal to: height: calc(100vh - 100px); */
  display: flex;
  flex-direction: row;
}

.content-body .content {
  /*   flex: 1 1 auto; */
  /* flex-grow: 1; width: calc(100% - 200px); */
  flex-grow: 0;
  overflow: clip;
  background: var(--lightGreen);
  width: 700px;
}
.content-body .sidenav,
.content-body .ads {
  /* flex: 0 0 200px; */
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: row;
  overflow: clip;
}
.content-body img {
  padding: 20px;
}

/* .content-body .sidenav {
  background: var(--lightRed);
}
.content-body .ads {
  background: var(--lightRed);
} */

.wishes {
  display: flex;
  flex-direction: column;
  flex: 1;
  justify-content: space-between;
}

.wish {
  display: flex;
  flex: 1;
  flex-grow: 0;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
}

.wishText {
  display: flex;
  flex-grow: 1;
  align-items: center;
  max-width: 250px;
  min-width: 100px;
}

a {
  display: flex;
  flex-grow: 0;
  flex: 0 0 120px;
  justify-content: center;
  align-items: center;
  background-color: var(--darkGreen);
  color: white;
  padding: 5px 5px;
  border-radius: 10px;
  text-align: center;
  text-decoration: none;
  height: 50px;
}

img {
  border-radius: 8px;
}
@import url("https://fonts.googleapis.com/css?family=Merienda+One");

html {
  background-color: #000;
  background-image: url(https://images.unsplash.com/photo-1531972497489-8eb337acf6e5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=193456e9385b553747a5e0f0cbc7badb&auto=format&fit=crop&w=1334&q=80);
  background-size: cover;
  height: 100%;
  background-repeat: no-repeat;
}

body,
.more-snow {
  &:before,
  &:after {
    content: "";
    position: fixed;
    top: -3000%;
    bottom: 0;
    right: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.01);
    background-image: url(http://www.freepngimg.com/download/winter_snow/4-2-white-snow-png.png);
    background-size: 30%;
    -webkit-animation-name: MOVE-BG;
    -webkit-animation-duration: 500s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;
    pointer-events: none; /* Ensure snow effects do not block clicks */
  }
}

body {
  &:before {
    filter: blur(6px);
    opacity: 0.8;
  }
  &:after {
    filter: blur(1px);
    top: -1500%;
    background-image: url(http://www.freepngimg.com/download/winter_snow/4-2-white-snow-png.png);
    background-size: 90%;
    animation-duration: 200s;
  }
}

.more-snow {
  &:before {
    filter: blur(4px);
    opacity: 0.8;
    top: -2500%;
    background-size: 60%;
    animation-duration: 400s;
  }
  &:after {
    filter: blur(2px);
    opacity: 0.8;
    top: -2000%;
    background-image: url(https://laviwebfiles.com/stage/codepen/4-2-white-snow-png.png);
    background-size: 70%;
    animation-duration: 300s;
  }
}

/* Ensure links remain clickable */
a {
  position: relative;
  z-index: 10; /* Higher than snow effects */
}

@-webkit-keyframes MOVE-BG {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(70%);
  }
}

